# ANLCVEVOLVENANOXRD

./: .gitignore  ANALYSIS_PLAYBOOK.md  CLAUDE.md  CVEVOLVE_PROGRESS.md  CVEvolve_GETTING_STARTED.md  CreatingPackage.txt  GETTING_STARTED.md  GRID_METHODS.md  LAN_ACCESS_CHECK.md  NANO_XRD_FEATURES.md  ProjectGuide.txt  QSPACE.md  README.md  ROCKING_STUDY_203-214.md  RockingResearch.txt  STRUCTURE.md  TASK_deskew_coordinates.md  TERMINOLOGY.md  TERRITORY.md  TakajiReport.docx  TakajiReport.md  binning_benefits_report.py  check_lan_access.sh  compare_to_truth.py  create_mock_workspace.py  deskew_peaks.py  feature_brightness_size_candidates.py  feature_candidates_compare.py  generate_validation_labels.py  make_dummy_project.py  opensource.txt  peak_intensity_snr_histograms.py  pyproject.toml  requirements.txt  run_binning.sh  scan_203_skew_map.py  tomorrow.md
MockWorkspace/: config.yaml
MockWorkspace/Metadata/: gui_state.json
MockWorkspace/PeakAlgorithms/: baseline.py
MockWorkspace/assets/: reflections.py
TakaTest/TakaProject/: config.yaml
analysis/: data_pipeline_explained.md  generate_grid_mapping.py  noise_reduction_peaks.py  spatial_feature_analysis.py  xrd_proc.py
analysis/deprecated/: device_map.py  feature_viewer.py  labeling_gui.py  labeling_tool.py  orientation_map.py
cvevolve_1x1/: config.yaml  config_f2.yaml  config_phase1.yaml  generate_1x1_labels.py  generate_phase1_labels.py  holdout_test_prompt.md  holdout_test_prompt_phase1.md  prompt.md  prompt_phase1.md
cvevolve_3x3/: config.yaml  holdout_test_prompt.md  prompt.md
cvevolve_4x4/: config.yaml  holdout_test_prompt.md  prebuild_bins.py  prompt.md
cvevolve_5x5/: COST_SUMMARY.md  Containerfile  REMOTE_DEPLOYMENT.md  config.container.yaml  config.yaml  holdout_test_prompt.md  prompt.md  resume_podman.sh  run_podman.sh
cvevolve_hotspot/validation_data/: annotations.json
deprecated/: README.md  coord_link_1x1.py
docs/: ANALYSIS_METHODOLOGY.md  IMPLEMENTATION.md  NewFullProcessThing_original_notes.md  PLAN.md  PREPROCESSING_GUIDE.md  PROJECT_OVERVIEW.md  TERMINOLOGY.md
hotspot_detection_split_configs/: config.yaml  prompt.md
preprocessing/: data_preprocess_isn_26c1.py  data_preprocess_isn_26c1_updated.py  process_dp_velo_21c1.py
python_scripts/: append_detectors_links.py  data_preprocess_MP_isn_26c1.py  ptychi_recon.py  ptychi_recon_jd.py
src/xrd_tools/: __init__.py  cli.py  config.py
tests/: conftest.py  test_io.py  test_logic.py  test_processing.py
xrd_app/: CLAUDE.md  __init__.py  app.py  cli.py  config.py  workspace.py
xrd_app/CombinedAlgorithms/: catalog.json
xrd_app/NoiseReduction/: noise_reduction_algorithms.py
xrd_app/PeakAlgorithms/: catalog.json
xrd_app/ShapeAlgorithms/: catalog.json  gaussian.py  gaussian_deskew.py  territory.py  voigt.py
xrd_app/assets/: example.poni
xrd_app/core/: __init__.py  aggregate.py  algorithms.py  catalogs.py  combined_device.py  deskew_legacy.py  geometry.py  holdout.py  io.py  lineage.py  positions.py  prediction.py  processing.py  qspace.py  reflections.py  rocking.py  rsm.py  save_algorithm.py  territory.py  tracking.py
xrd_app/gui/: device_map.py  labeling.py  orientation.py  palette.py  rsm_view.py  territory_map.py  viewer.py
(+73 files in other folders)
