[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xrd-app"
version = "0.1.0"
description = "Single-GUI XRD analysis workflow (peak/shape finding, labeling, CVEvolve) over a scriptable CLI"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "h5py",
    "hdf5plugin",
    "tifffile",
    "pandas",
    "Pillow",
    "PyQt5",
    "click",
    "pyyaml",
]

# pyFAI is only needed for the (deferred) .poni -> tth conversion. Keep it
# optional so the core app installs light; the Convert-.poni button degrades
# gracefully when it is absent.
[project.optional-dependencies]
poni = ["pyFAI"]            # .poni → tth conversion (core/geometry.py)
viz = ["pyqtgraph"]         # reserved: pyqtgraph GUI rewrite (deferred to final phase)
notebook = ["ipykernel", "jupyter"]

[project.scripts]
xrd-app = "xrd_app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["xrd_app*"]

[tool.setuptools.package-data]
"xrd_app" = [
    "assets/*",
    "PeakAlgorithms/catalog.json",
    "PeakAlgorithms/**/*.py",
    "ShapeAlgorithms/**/*",
    "CombinedAlgorithms/**/*",
]
