[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xrd-app"
version = "0.1.0"
description = "Single-GUI XRD analysis workflow (peak/shape finding, labeling, CVEvolve) over a scriptable CLI"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "h5py",
    "hdf5plugin",
    "tifffile",
    "pandas",
    "Pillow",
    "PyQt5",
    "pyqtgraph",
    "click",
    "pyyaml",
]

# Heavy geometry deps are optional so the core app installs light and degrades
# gracefully (the Convert-.poni button and `qspace --poni` warn when absent).
[project.optional-dependencies]
poni = ["pyFAI"]            # .poni → tth conversion (core/geometry.py) + qspace --poni tilt path
qspace = ["xrayutilities"]  # pixel → 3D reciprocal-space (q) mapping (core/qspace.py; see QSPACE.md)
notebook = ["ipykernel", "jupyter"]

[project.scripts]
xrd-app = "xrd_app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["xrd_app*"]

[tool.setuptools.package-data]
"xrd_app" = [
    "assets/*",
    "PeakAlgorithms/catalog.json",
    "PeakAlgorithms/**/*.py",
    "ShapeAlgorithms/**/*",
    "CombinedAlgorithms/**/*",
]
